--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.QuizMate"
         tools:targetApi="31">
         <activity
+            android:name=".QuizActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -31,4 +34,5 @@
             android:name=".ChangePasswordActivity"
             android:exported="true" />
     </application>
+
 </manifest>
